force-app/main/default/objects/Case_Item__c/Case_Item__c.object-meta.xml
<CustomObject>
    <description
    >Stores items selected for a Case before vendor submission</description>
    <label>Case Item</label>
    <nameField>
        <label>Case Item Name</label>
        <type>AutoNumber</type>
        <displayFormat>CI-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Case Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>