force-app/main/default/objects/Case_Item__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Parent Case for this item</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Items</relationshipLabel>
    <relationshipName>Case_Items</relationshipName>
    <type>MasterDetail</type>
</CustomField>