force-app/main/default/objects/Case_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Related Product from the Pricebook</description>
    <label>Product Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Case Items</relationshipLabel>
    <relationshipName>Case_Items</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>